# openface2_ros

openface2_bridge/: CMakeLists.txt  package.xml
openface2_bridge/launch/: au_detector.launch  headpose.launch
openface2_bridge/src/: au_detector_single.cpp  headpose.cpp  openface2_ros.cpp
openface2_ros/: package.xml
openface2_ros_msgs/: CMakeLists.txt  package.xml
openface2_ros_msgs/msg/: ActionUnits.msg
